docs: update swagger documentation
